<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Computer Quiz</string>
    <string name="app_name_lite">Computer Quiz (LITE)</string>
    
    <string name="label_intro_activity">Intro</string>
    <string name="label_contact_activity">Contact Us</string>
    <string name="label_quiz_activity">Quiz</string>
    <string name="label_results_activity">Results</string>
    <string name="label_settings_activity">Settings</string>
    
    <string name="menu_about">Info</string>
    <string name="menu_settings">Settings</string>

    <string name="th_level">Level</string>
    <string name="th_mode">Mode</string>
    <string name="th_questions_num">Questions</string>
    <string name="th_categories">Categories</string>

    <string name="title_select_level">Select difficulty level</string>
    <string name="title_select_mode">Select game mode</string>
    <string name="title_select_questions_num">Select number of questions</string>
    <string name="title_select_categories">Select categories</string>
    <string name="btn_select_ellipsis">Select&#8230;</string>

    <string name="title_no_matching_questions">No matching questions&#8230;</string>
    <string name="msg_no_matching_questions">Sorry, there are no questions matching the active filters. Please try again with different category filters and/or difficulty level.</string>

    <string name="title_activity_main">Computer Quiz</string>
    <string name="msg_welcome_to_the_quiz">Welcome to the Computer Quiz!</string>
    <string name="msg_select_level">Select a difficulty level:</string>
    <string name="msg_select_mode">Select a game mode:</string>
    <string name="suddendeath_mode_format" formatted="false">Sudden Death! - %d Questions</string>

    <string name="mode_score_as_you_go">Score as you go</string>
    <string name="mode_suddendeath">Sudden death!</string>
    <string name="mode_score_in_the_end">Score in the end</string>

    <string name="title_beta_notice">BETA Notice</string>
    <string name="msg_beta_notice">Hey thanks for trying the BETA! Everything should be working, but there are not enough questions yet. Enjoy anyway, the first release is coming really soon!</string>

    <string name="btn_start_quiz">Start Quiz!</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_done">Done</string>

    <string name="key_max_questions_normal">max_questions_normal</string>
    <string name="title_max_questions_normal">Normal mode</string>
    <string name="dialog_title_max_questions_normal"># of questions</string>
    <string name="summary_max_questions_normal">Number of questions in normal mode</string>
    <string name="summary_max_questions_normal_format">Maximum # of questions = %s</string>
    
    <string name="key_max_questions_suddendeath">max_questions_suddendeath</string>
    <string name="title_max_questions_suddendeath">Sudden Death mode</string>
    <string name="dialog_title_max_questions_suddendeath"># of questions</string>
    <string name="summary_max_questions_suddendeath">Number of questions in sudden death mode</string>
    <string name="summary_max_questions_suddendeath_format">Maximum # of questions = %s</string>

    <string name="pref_level">level</string>
    <string name="pref_mode">mode</string>
    <string name="pref_questions_num">questions_num</string>
    <string name="pref_selected_categories">selected_categories</string>

    <string name="email_address">ManyQuiz Info &lt;info@manyquiz.com&gt;</string>
    <string name="no_email_client">Could not find an email client, cannot send message :(</string>
    <string name="email_client_chooser">Choose an email app…</string>
    
    <string name="title_contact">Contact Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="subject_contact">[manyquiz-app] </string>
    
    <string name="menu_mark">Mark</string>
    <string name="btn_send_marked">Email marked questions</string>
    <string name="subject_marked_questions">[manyquiz-app] marked questions</string>

    <string name="message_type_bug">Bug</string>
    <string name="message_type_comment">Comment</string>
    <string name="message_type_idea">Idea</string>
    
    <string name="result_score_format" formatted="false">Score: %d / %d (%d%%)</string>

    <string name="result_0">Dude, you got them all wrong!</string>
	<string name="result_less_than_10">Not looking great. You need more practice!</string>
	<string name="result_less_than_40">Could have been worse. Try harder!</string>
	<string name="result_less_than_70">Nice going. Keep practicing!</string>
	<string name="result_less_than_90">Looking good. Keep going!</string>
	<string name="result_less_than_100">Damn you\'re good. Can you make it all the way?</string>
	<string name="result_100">Perfect. 100% Congratulations, you\'re a friggin\' MACHINE!</string>
    <string name="result_bug">Ouch. You found a bug. Please tell us about it!</string>
    <string name="msg_question_marked">Marked question.</string>

</resources>
