<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none">

    <RelativeLayout
        style="@style/mainHeaderWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            style="@style/mainHeader"
            android:layout_alignParentLeft="true"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/lite_watermark"
            style="@style/liteWatermark"
            android:layout_toRightOf="@id/title"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView style="@style/mainContent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/summary"
                android:text="@string/msg_welcome_to_the_quiz" />

            <TextView
                android:id="@+id/msg_select_level"
                style="@style/summary"
                android:text="@string/msg_select_level" />

            <RadioGroup
                android:id="@+id/level_choices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></RadioGroup>

            <TextView
                style="@style/summary"
                android:text="@string/msg_select_mode" />

            <RadioGroup
                android:id="@+id/mode_choices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/mode_score_as_you_go"
                android:orientation="vertical">

                <RadioButton
                    android:id="@id/mode_score_as_you_go"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_score_as_you_go"
                    android:tag="@string/const_score_as_you_go" />

                <RadioButton
                    android:id="@+id/mode_sudden_death"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_suddendeath"
                    android:tag="@string/const_suddendeath" />

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_score_in_the_end"
                    android:tag="@string/const_score_in_the_end" />
            </RadioGroup>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/summary"
                        android:text="@string/th_categories" />

                    <Button
                        android:id="@+id/btn_select_categories"
                        style="@style/button"
                        android:text="@string/btn_select_ellipsis" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start_quiz"
            style="@style/wideButton"
            android:text="@string/btn_start_quiz" />

    </LinearLayout>

</LinearLayout>
